Regreso de campo especificaciones como json
